# Amazon

./: amazon.cli  checkup.sh  pyproject.toml  requirements.txt  script.sh
src/amazons/: cli.py  rules.py  state.py
src/amazons.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/amazons_ui/: ui_pygame.py
tests/: test_rules.py
