[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "amazons"
version = "0.1.0"
description = "Jeu des Amazones en Python (moteur, CLI, IA)"
requires-python = ">=3.10"
readme = "README.md"


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
